--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="creator_email">Email - maumau.g.o@unifebe.edu.br</string>
     <string name="teacher">Professor - Edney Imme</string>
     <string name="item_name">Nome do Item</string>
+    <string name="item_escreva">Ou escreva o item!</string>
 </resources>
